--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
   body {
     /* @apply bg-gray-100; */
     font-family: "Noto Sans Thai", sans-serif;
+    color: #273D4B;
   }
 /*   .two-bg {
     background-image: linear-gradient(to right, #49CED8, #59DEBB),
