--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,3 +49,18 @@
   justify-content: center;
   align-items: center;
 }
+
+.carousel-root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel-root img {
+  height: 300px;
+  object-fit: cover;
+}
+.carousel .slide .legend {
+  background: none !important;
+  font-size: 25px !important;
+}
