--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,3 +65,14 @@
   font-size: 25px !important;
 }
 
+.carousel .carousel-status {
+  visibility: hidden;
+}
+.Information {
+  text-align: center;
+  padding-top: 25px;
+}
+.title {
+  font-size: 20px;
+  color: red;
+}
