add basePath & deploy

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
   }
   /*   .two-bg {
     background-image: linear-gradient(to right, #49CED8, #59DEBB),
-      url("/images/stepsImg/bg-banner.png");
+      url("../public/images/stepsImg/bg-banner.png");
   } */
 }
 
