--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,3 +76,12 @@
   font-size: 20px;
   color: red;
 }
+.active {
+  background-color: #4bd0d5 !important;
+  color: #fff !important;
+}
+
+.unactive {
+  background-color: #fff !important;
+  color: black !important;
+}
